Changed tests and production code, tests still not working...